--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+dist: xenial
 node_js:
   - "5.9"
 env:
@@ -11,9 +12,7 @@ addons:
       - g++-4.8
 
 before_install:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g karma
 
-script: grunt
+script: xvfb-run grunt
 sudo: false
